specgen and docs cleanup
